--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_vector_icons: ^0.2.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -49,6 +49,7 @@ flutter:
     - assets/images/cow-funny-ruminant-cute.jpg
     - assets/images/cow.jpg
     - assets/images/logo.png
+    - assets/images/cowbirthcard.png
      
 
   # An image asset can refer to one or more resolution-specific "variants", see
